# label-studio-mcp-server

./: .gitignore  README.md  label-studio-mcp.py  pyproject.toml
.github/workflows/: gitleaks.yml
label_studio_mcp/: __init__.py  main.py  mcp_env.py  mcp_server.py
